--- a/index.html
+++ b/index.html
@@ -354,5 +354,6 @@
 
     <!-- Scripts -->
     <script src="assets/js/main.js"></script>
+<script src="assets/js/search-enhanced.js"></script>
 </body>
 </html>
