--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="assets/images/20231107_142801.jpg" alt="Machine Re-FAP professionnelle" loading="eager">
+                    <img src="assets/images/Machine re-fap chez carter-cash.png" alt="Machine Re-FAP professionnelle" loading="eager">
                     <div class="hero-stats">
                         <div class="stat">
                             <span class="stat-value">10x</span>
@@ -113,7 +113,7 @@
             <h2 class="section-title">Notre machine Re-FAP haute technologie</h2>
             <div class="machine-content">
                 <div class="machine-image">
-                    <img src="assets/images/20231107_142801.jpg" alt="Machine Re-FAP professionnelle" loading="lazy">
+                    <img src="assets/images/Machine re-fap chez carter-cash.png" alt="Machine Re-FAP professionnelle" loading="lazy">
                 </div>
                 <div class="machine-info">
                     <h3>⚡ Technologie de nettoyage avancée</h3>
