--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph / Social Media -->
     <meta property="og:title" content="Nettoyage FAP chez Carter-Cash - 99€ au lieu de 2000€">
     <meta property="og:description" content="Service de nettoyage FAP disponible dans tous les Carter-Cash de France. Économisez jusqu'à 90% sur le remplacement.">
-    <meta property="og:image" content="assets/images/20231107_142801.jpg">
+    <meta property="og:image" content="assets/images/Machine re-fap chez carter-cash.png>
     <meta property="og:url" content="https://refap.github.io/carter-cash-refap/">
     
     <!-- Favicon -->
