--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -65,7 +65,7 @@
                     <p>Re-FAP n'est <strong>PAS</strong> le vendeur du service de nettoyage FAP.</p>
                     <p>Notre rôle se limite à :</p>
                     <ul>
-                        <li>✅ Fournir les machines de nettoyage FAP aux magasins Carter-Cash (location)</li>
+                        <li>✅ Fournir les machines de nettoyage FAP aux magasins Carter-Cash</li>
                         <li>✅ Assurer la maintenance technique des équipements</li>
                         <li>✅ Former les équipes Carter-Cash à l'utilisation des machines</li>
                         <li>✅ Animer commercialement le service pour le compte de Carter-Cash</li>
