--- a/rgpd.html
+++ b/rgpd.html
@@ -38,7 +38,7 @@
             <div class="legal-section">
                 <h2>1. Responsable du traitement</h2>
                 <p><strong>Re-FAP SARL</strong><br>
-                [ADRESSE À COMPLÉTER]<br>
+                13 COURS SABLON 63000 CLERMONT-FERRAND<br>
                 Email DPO : contact@re-fap.fr<br>
                 Téléphone : 0473378821</p>
             </div>
