--- a/rgpd.html
+++ b/rgpd.html
@@ -240,9 +240,9 @@
                 <h2>13. Contact et réclamations</h2>
                 <p><strong>Pour toute question sur vos données :</strong></p>
                 <ul>
-                    <li>Email DPO : dpo@re-fap.fr</li>
-                    <li>Téléphone : 0800 737 327</li>
-                    <li>Courrier : Re-FAP - [ADRESSE]</li>
+                    <li>Email DPO : contact@re-fap.fr</li>
+                    <li>Téléphone : 0473378821</li>
+                    <li>Courrier : Re-FAP - 13 COURS SABLON 63000 CLERMONT-FERRAND</li>
                 </ul>
                 
                 <p><strong>Droit de réclamation :</strong><br>
