--- a/info-service.html
+++ b/info-service.html
@@ -25,7 +25,7 @@
     <main class="legal-content">
         <div class="container">
             <h1>Informations sur le Service Re-FAP</h1>
-            <p class="last-update">Dernière mise à jour : Décembre 2024</p>
+            <p class="last-update">Dernière mise à jour : Septembre 2025</p>
 
             <section id="fonctionnement">
                 <h2>🔧 Comment fonctionne le service Re-FAP ?</h2>
