--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                     <img src="assets/images/logo carter cash.jpg" alt="Carter-Cash">
                 </div>
                 <div class="nav-actions">
-                    <a href="tel:0800737327" class="nav-phone">📞 0800 737 327</a>
+                    <a href="tel:0473378821" class="nav-phone">📞 0473378821</a>
                     <a href="#devis" class="btn btn-primary">Devis gratuit</a>
                 </div>
             </div>
@@ -1080,10 +1080,10 @@
             <div class="process-grid">
                 <div class="process-card">
                     <div class="process-icon">🔧</div>
-                    <h3>1. Démontez votre FAP</h3>
-                    <p>Vous-même ou avec l'aide d'un mécanicien</p>
-                    <a href="#tutoriel" class="link">Voir le tutoriel →</a>
-                </div>
+                 <h3>1. Démontez votre FAP vous-même</h3>
+                    <p>ou faites-le démonter par un professionnel pour une prise en charge complète</p>
+                    <a href="https://re-fap.fr/trouver_garage_partenaire/" target="_blank" class="link">Trouver un garage partenaire →</a>
+                   </div>
                 <div class="process-card">
                     <div class="process-icon">🏪</div>
                     <h3>2. Déposez chez Carter-Cash</h3>
