--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
             <div class="process-grid">
                 <div class="process-card">
                     <div class="process-icon">🔧</div>
-                 <h3>1. Démontez votre FAP vous-même</h3>
+                 <h3>1. Démontez votre FAP</h3>
                     <p>ou faites-le démonter par un professionnel pour une prise en charge complète</p>
                     <a href="https://re-fap.fr/trouver_garage_partenaire/" target="_blank" class="link">Trouver un garage partenaire →</a>
                    </div>
