--- a/index.html
+++ b/index.html
@@ -1298,7 +1298,7 @@
                 <p>Rejoignez les milliers d'automobilistes satisfaits</p>
                 <div class="cta-actions">
                     <a href="#devis" class="btn btn-white">Obtenir mon devis →</a>
-                    <a href="tel:0800737327" class="btn btn-outline-white">📞 0800 737 327</a>
+                    <a href="tel:0473378821" class="btn btn-outline-white">📞 0473378821</a>
                 </div>
             </div>
         </div>
@@ -1334,6 +1334,7 @@
                     <p><strong>Service vendu et opéré par :</strong></p>
                     <p style="font-size: 1.2em; font-weight: bold; margin: 10px 0;">CARTER-CASH</p>
                     <p style="line-height: 1.8;">
+                        ✅ Prise en charge Carter-Cash<br>
                         ✅ Facturation Carter-Cash<br>
                         ✅ Garantie 1 an Carter-Cash<br>
                         ✅ SAV assuré par Carter-Cash
