--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@
                 </details>
                 <details class="faq-item">
                     <summary>Je ne sais pas démonter mon FAP</summary>
-                    <p>Demandez à votre mécanicien habituel ou consultez notre tutoriel vidéo. Le démontage prend 30-60 minutes.</p>
+                    <p>Demandez à votre mécanicien habituel ou faites-le démonter par <a href="https://refap.github.io/re-fap-landing/">un de nos garages partenaires pour une prise en charge complète</a></p>
                 </details>
                 <details class="faq-item">
                     <summary>Quelle différence avec le remplacement ?</summary>
