--- a/index.html
+++ b/index.html
@@ -1284,7 +1284,7 @@
                 </details>
                 <details class="faq-item">
                     <summary>Comment savoir si mon magasin est équipé ?</summary>
-                    <p>Seuls Lambres-lez-Douai (59) et Thiais (94) ont la machine. Utilisez notre recherche ci-dessus pour vérifier.</p>
+                    <p>Seuls Lambres-lez-Douai (59) et Thiais (94) ont la machine pour le moment. Utilisez notre recherche ci-dessus pour vérifier.</p>
                 </details>
             </div>
         </div>
