--- a/index.html
+++ b/index.html
@@ -1084,12 +1084,14 @@
                     <p>ou faites-le démonter par un professionnel pour une prise en charge complète</p>
                     <a href="https://re-fap.fr/trouver_garage_partenaire/" target="_blank" class="link">Trouver un garage partenaire →</a>
                    </div>
-                <div class="process-card">
-                    <div class="process-icon">🏪</div>
-                    <h3>2. Déposez chez Carter-Cash</h3>
-                    <p>Dans n'importe quel magasin, sans RDV</p>
-                    <a href="#trouver-magasin" class="link">Trouver un magasin →</a>
-                </div>
+              <div class="process-card">
+    <div style="display: flex; justify-content: center; margin-bottom: 20px;">
+        <img src="assets/images/logo carter cash.jpg" alt="Carter-Cash" style="height: 50px; width: auto;">
+    </div>
+    <h3>2. Déposez chez Carter-Cash</h3>
+    <p>Dans n'importe quel magasin, sans RDV</p>
+    <a href="#trouver-magasin" class="link">Trouver un magasin →</a>
+</div>
                 <div class="process-card">
                     <div class="process-icon">✨</div>
                     <h3>3. Récupérez-le propre</h3>
